--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>23suca34-creater</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
