--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
 		<java.version>17</java.version>
 		<sonar.organization>23suca34-creater</sonar.organization>
 	</properties>
-	<dependencies>
+		...existing code...
+		<sonar.organization>23suca34-creater</sonar.organization>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
