--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,7 @@
 		<java.version>17</java.version>
 		<sonar.organization>23suca34-creater</sonar.organization>
 	</properties>
-		...existing code...
-		<sonar.organization>23suca34-creater</sonar.organization>
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
